--- a/templates/datarobot-autoscale-template.yaml
+++ b/templates/datarobot-autoscale-template.yaml
@@ -1,8 +1,20 @@
+###########################################################################
+#  Copyright 2020 DataRobot Inc. All Rights Reserved.                     #
+#                                                                         #
+#  This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES       #
+#  OR CONDITIONS OF ANY KIND, express or implied.                         #
+###########################################################################
+#
+# TODO: View CloudFormation Logs in the Console
+# https://aws.amazon.com/blogs/devops/view-cloudformation-logs-in-the-console/
+# https://s3.amazonaws.com/cloudformation-templates-us-east-1/CloudWatch_Logs.template
 
+AWSTemplateFormatVersion: "2010-09-09"
+Description: DataRobot CloudFormation stack to create the EC2 instances for the cluster. (qs-????) 
 Parameters:
   KeyPairName:
     Description: Name of an existing public/private key pair. If you do not have one in this AWS Region,
-      please create it before continuing.
+      please create it before continuing. 
     Type: 'AWS::EC2::KeyPair::KeyName'
   MaxModelingNodes:
     Default: '1'
