--- a/templates/datarobot-iam-template.yaml
+++ b/templates/datarobot-iam-template.yaml
@@ -4,9 +4,13 @@
 #  This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES       #
 #  OR CONDITIONS OF ANY KIND, express or implied.                         #
 ###########################################################################
-# https://docs.aws.amazon.com/systems-manager/latest/userguide/sysman-paramstore-access.html
-AWSTemplateFormatVersion: 2010-09-09
-Description: Build out the IAM role allowing us to read the S3 bucket and EC2 instances
+#
+# TODO: View CloudFormation Logs in the Console
+# https://aws.amazon.com/blogs/devops/view-cloudformation-logs-in-the-console/
+# https://s3.amazonaws.com/cloudformation-templates-us-east-1/CloudWatch_Logs.template
+
+AWSTemplateFormatVersion: "2010-09-09"
+Description: DataRobot CloudFormation stack to create the EC2 instances for the cluster. (qs-????) 
 Parameters:
   MainStack:
     Type: String
