--- a/templates/datarobot-main-template.yaml
+++ b/templates/datarobot-main-template.yaml
@@ -1,5 +1,16 @@
-AWSTemplateFormatVersion: '2010-09-09'
-Description: Deploy DataRobot into an existing VPC
+###########################################################################
+#  Copyright 2020 DataRobot Inc. All Rights Reserved.                     #
+#                                                                         #
+#  This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES       #
+#  OR CONDITIONS OF ANY KIND, express or implied.                         #
+###########################################################################
+#
+# TODO: View CloudFormation Logs in the Console
+# https://aws.amazon.com/blogs/devops/view-cloudformation-logs-in-the-console/
+# https://s3.amazonaws.com/cloudformation-templates-us-east-1/CloudWatch_Logs.template
+
+AWSTemplateFormatVersion: "2010-09-09"
+Description: DataRobot CloudFormation stack to create the EC2 instances for the cluster. (qs-????) 
 Metadata:
   QuickStartDocumentation:
     EntrypointName: Launch into an existing VPC
@@ -124,7 +135,7 @@ Parameters:
       a forward slash. See https://docs.aws.amazon.com/AmazonS3/latest/dev/UsingMetadata.html 
       and https://aws-quickstart.github.io/option1.html.
   QSS3BucketRegion:
-    Default: 'us-west-2'
+    Default: 'us-east-1'
     Description: 'AWS Region where the Quick Start S3 bucket (QSS3BucketName) is 
       hosted. Keep the default Region unless you are customizing the template. 
       Changing this Region updates code references to point to a new Quick Start location. 
@@ -137,6 +148,7 @@ Conditions:
     - !Ref DRS3CreateBucket
     - "True"
 
+# Use Centos 8.0.2.2004 as most stable version for Data Robot 7.0.2
 Mappings: 
   RegionMap: 
     us-east-1: 
@@ -170,29 +182,6 @@ Resources:
       KeyPairName: !Ref KeyPairName
       TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/templates/datarobot-autoscale-template.yaml
       
-        
-
-  BastionStack:
-    Type: AWS::CloudFormation::Stack
-    Properties:
-      TemplateURL: https://aws-quickstart.s3.amazonaws.com/quickstart-linux-bastion/templates/linux-bastion.template
-      Parameters:
-        VPCID: !Ref VPCID
-        PublicSubnet1ID: !Ref PublicSubnet1ID
-        PublicSubnet2ID: !Ref PublicSubnet2ID
-        KeyPairName: !Ref 'KeyPairName'
-        BastionInstanceType: t2.micro
-        BastionHostName: DRBastion
-        NumBastionHosts: 2
-        BastionAMIOS: Amazon-Linux2-HVM
-        EnableTCPForwarding: 'true'
-        QSS3BucketName: aws-quickstart
-        QSS3KeyPrefix: quickstart-linux-bastion/
-        QSS3BucketRegion: us-east-1
-        RemoteAccessCIDR: '0.0.0.0/0'
-        VPCID: !Ref VPCID
-
-
   S3Bucket:
     Type: AWS::S3::Bucket
     Condition: CreateS3BucketCondition
