--- a/templates/datarobot-node-template.yaml
+++ b/templates/datarobot-node-template.yaml
@@ -4,9 +4,13 @@
 #  This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES       #
 #  OR CONDITIONS OF ANY KIND, express or implied.                         #
 ###########################################################################
+#
+# TODO: View CloudFormation Logs in the Console
+# https://aws.amazon.com/blogs/devops/view-cloudformation-logs-in-the-console/
+# https://s3.amazonaws.com/cloudformation-templates-us-east-1/CloudWatch_Logs.template
 
 AWSTemplateFormatVersion: "2010-09-09"
-Description: DataRobot CloudFormation stack to create the child EC2 instances of the cluster
+Description: DataRobot CloudFormation stack to create the EC2 instances for the cluster. (qs-????) 
 Parameters:
   MainStack:
     Type: String
@@ -481,10 +485,10 @@ Resources:
 
                   echo "Creating AMI for ModelingOnly Node"
                   my_instance_id=$(curl --silent http://169.254.169.254/latest/meta-data/instance-id)
-                  my_ami_name=$MainStack + $my_name
+                  my_ami_name=$my_name
                   my_ami_json=$(aws ec2 create-image --instance-id $my_instance_id --name $my_ami_name --no-reboot)
                   # my_ami_json will return a json immedately like: { "ImageId": "ami-########"}
-                  my_ami=$(echo ($my_ami_json) | python3 -c "import sys, json; print(json.load(sys.stdin)['ImageId'])")
+                  my_ami=$(echo "$my_ami_json" | python3 -c "import sys, json; print(json.load(sys.stdin)['ImageId'])")
                   
                   echo "AMI created is ($my_ami)"
 
@@ -492,11 +496,11 @@ Resources:
                   aws ssm delete-parameter --region $AWS_REGION --name "/$MAIN_STACK/datarobot-ami-key"
 
                   # code to wait for AMI to be done
-                  lc_count = aws ec2 describe-images --region $AWS_REGION --image-ids $my_ami | grep available | wc -l
-                  while [ lc_count < 1 ]; do
+                  lc_count=$(aws ec2 describe-images --region $AWS_REGION --image-ids $my_ami | grep available | wc -l)
+                  while [ $lc_count -lt 1 ]; do
                     echo "lc = $lc_count"
                     sleep 30
-                    lc_count = aws ec2 describe-images --region $AWS_REGION --image-ids $my_ami | grep available | wc -l
+                    lc_count=$(aws ec2 describe-images --region $AWS_REGION --image-ids $my_ami | grep available | wc -l)
                   done
 
                   # write ami to ssm
